ulthuan/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: photos.maximstroud.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: journal-immich-server
                port:
                  number: 2283
  tls:
    - hosts:
        - photos.maximstroud.de
      secretName: maximstroud.de-cert
